# Playground

./: .gitmodules  AGENTS.md  CMakeLists.txt  README.md
docs/: DESIGN_GUIDE.md  DEVELOPMENT_GUIDE.md  DYNAMIC_PROCESSING_STATUS.md  DYNAMIC_SCRIPTING_PROPOSAL.md  IMAGING_CONTROLLER_PLAN.md  NEXT_SESSION_HANDOFF.md  SESSION_ARCHITECTURE.md  STEREO_3D_CAMERA_INTEGRATION.md  STRUCTURAL_REVIEW.md  STRUCTURE.md  WALKTHROUGH.md
src/: AbstractImagingController.h  CameraImagingController.cpp  CameraImagingController.h  DeviceSession.cpp  DeviceSession.h  DeviceWindow.cpp  DeviceWindow.h  DynamicLibraryLoader.cpp  DynamicLibraryLoader.h  GocatorImagingController.cpp  GocatorImagingController.h  GraphicsEngineSink.cpp  LogManager.cpp  LogManager.h  MainWindow.cpp  MainWindow.h  ProcessingFrame.h  ProcessingPipeline.cpp  ProcessingPipeline.h  ProcessingRegistry.cpp  ProcessingRegistry.h  QProcessingWidget.cpp  QProcessingWidget.h  QStaticImageControlWidget.cpp  StaticImageImagingController.cpp  StaticImageImagingController.h  main.cpp
src/Controller/: AbstractImagingController.h  CameraImagingController.cpp  CameraImagingController.h  GocatorImagingController.cpp  GocatorImagingController.h  GraphicsEngineSink.cpp  GraphicsEngineSink.h  StaticImageImagingController.cpp  StaticImageImagingController.h
src/Pipeline/: DynamicLibraryLoader.cpp  DynamicLibraryLoader.h  DynamicProcessingCompiler.cpp  DynamicProcessingCompiler.h  ProcessingPipeline.cpp  ProcessingPipeline.h  ProcessingRegistry.cpp  ProcessingRegistry.h
src/UI/: QProcessingWidget.cpp  QProcessingWidget.h  QStaticImageControlWidget.cpp  QStaticImageControlWidget.h  RuntimePathsDialog.cpp  RuntimePathsDialog.h
src/Utility/: LogManager.cpp  LogManager.h  ParameterParser.cpp  ParameterParser.h  RuntimeDependencyResolver.cpp  RuntimeDependencyResolver.h
